--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cryptr": "^6.0.2",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "knex": "^0.95.14",
     "pg": "^8.7.1"
