--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=<password>
+DB_PASSWORD=Adolfo97
 DB_DATABASE=facile
 DB_DIALECT=postgres
 DB_CLIENT=pg
